--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,92 @@
 #main {
   min-height: 600px;
   max-height: 2400px;
+  position: relative;
 }
 
 svg {
   color:var(--tertiary)
+}
+
+/* Navbar Styles */
+
+.nav-checkbox {
+  display: none;
+}
+
+.nav-button {
+  position: fixed;
+  top: 18px;
+  right: 18px;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  background-color:var(--quaternary);
+  border-radius: 50%;
+  z-index: 300;
+  cursor: pointer;
+}
+
+.nav-background {
+  position: fixed;
+  top: 14px;
+  right: 14px;
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  background: var(--tertiary);
+  background-size: cover;
+  background-position: center;
+  z-index: 100;
+  transition: all 1s cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+.nav-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  opacity: 0;
+  width: 0;
+  visibility: hidden;
+  z-index: 200;
+  transition: all 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.nav-list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 100%;
+  list-style: none;
+}
+
+.nav-item {
+  display: inline-block;
+  padding: 24px;
+  margin: 12px;
+  color: var(--quaternary);
+  font-size: 34px;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+}
+
+.nav-item:hover {
+  color: var(--secondary);
+  transform: scale(1.1);
+}
+
+.nav-checkbox:checked~.nav-background {
+  transform: scale(80)
+}
+
+.nav-checkbox:checked~.nav-nav {
+  width: 100%;
+  visibility: visible;
+  opacity: 1;
 }
 
 /* Home page styles */
