--- a/src/App.css
+++ b/src/App.css
@@ -268,6 +268,7 @@ svg {
 /* Contact page styles */
 .contact-text {
   font-size: 30px;
+  text-align: center;
   color: var(--quaternary);
   font-family: 'Kanit', sans-serif;
 }
@@ -295,29 +296,31 @@ svg {
 }
 
 /* Skills page styles */
-
 #skill-bubble-container {
   width: 60%;
+  font-family: 'Kanit', sans-serif;
 }
 
 #html-bubble {
   animation: float 4s ease-in-out infinite;
-  background-color: var(--quaternary);
+  background-color: var(--tertiary);
   width: 60px;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 25%;
-  box-shadow: 5px 5px var(--tertiary);
+  box-shadow: 5px 5px var(--secondary);
 }
 
 #css-bubble {
   animation: float 6s ease-in-out infinite;
-  background-color: var(--quaternary);
+  background-color: var(--secondary);
+  font-size: 28px;
   width: 75px;
   height: 60px;
   margin-left: -80px;
+  margin-bottom: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -327,19 +330,20 @@ svg {
 
 #javascript-bubble {
   animation: float 2s ease-in-out infinite;
-  background-color: var(--quaternary);
+  background-color: var(--tertiary);
   width: 80px;
-  height: 45px;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 20%;
-  box-shadow: 5px 5px var(--tertiary);
+  box-shadow: 5px 5px var(--secondary);
 }
 
 #react-bubble {
   animation: float 10s ease-in-out infinite;
-  background-color: var(--quaternary);
+  background-color: var(--secondary);
+  font-size: 36px;
   width: 125px;
   height: 90px;
   margin-left: 80px;
@@ -350,6 +354,72 @@ svg {
   box-shadow: 5px 5px var(--tertiary);
 }
 
+#node-bubble {
+  animation: float 4s ease-in-out infinite;
+  background-color: var(--secondary);
+  font-size: 24px;
+  width: 95px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25%;
+  box-shadow: 5px 5px var(--tertiary);
+}
+
+#mongo-bubble {
+  animation: float 7s ease-in-out infinite;
+  background-color: var(--tertiary);
+  font-size: 20px;
+  width: 100px;
+  height: 80px;
+  margin-right: 40px;
+  margin-left: -40px;
+  margin-top: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25%;
+  box-shadow: 5px 5px var(--secondary);
+}
+
+#express-bubble {
+  animation: float 2s ease-in-out infinite;
+  background-color: var(--tertiary);
+  width: 75px;
+  height: 50px;
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25%;
+  box-shadow: 5px 5px var(--secondary);
+}
+
+#mysql-bubble {
+  animation: float 6s ease-in-out infinite;
+  background-color: var(--secondary);
+  font-size: 28px;
+  width: 110px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25%;
+  box-shadow: 5px 5px var(--tertiary);
+}
+
+#nosql-bubble {
+  animation: float 5s ease-in-out infinite;
+  background-color: var(--tertiary);
+  width: 55px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25%;
+  box-shadow: 5px 5px var(--secondary);
+}
 /* animations */
 @keyframes fadein {
   from {
@@ -473,12 +543,64 @@ svg {
     font-size: 24px;
     width: 1000%;
   }
+
+  /* Skill mediaqueries */
+  #skill-bubble-container {
+    width: 100%;
+  }
+
+  #css-bubble {
+    margin-left: -60px;
+  }
+
+  #express-bubble {
+    margin-right: 20px;
+  }
+
+  #mysql-bubble {
+    margin-top: 20px;
+  }
+
+  #mongo-bubble {
+    margin-top: 110px;
+  }
+
+  #nosql-bubble {
+    margin-top: -20px;
+  }
+}
+
+@media screen and (max-width: 700px ) {
+  /* Skills mediaqueries */
+  #skill-bubble-container {
+    width: 100%;
+  }
+
+  #css-bubble {
+    margin-left: -60px;
+  }
+
+  #express-bubble {
+    margin-right: 20px;
+  }
+
+  #mysql-bubble {
+    margin-top: 20px;
+  }
+
+  #mongo-bubble {
+    margin-top: 110px;
+  }
+
+  #nosql-bubble {
+    margin-top: -20px;
+  }
 }
 
 @media screen and (max-width: 1000px ) {
   /* Project mediaqueries */
   .card {
-    width: 80%;
+    width: 40%;
     margin: 14px;
     height: 100%;
     -webkit-box-reflect:below 0px linear-gradient(transparent, transparent, transparent);
